src/test/resources/accept/emptyIfStatementBlock.ul
int bar ()
{
    int id1;

    if (true) {
    }
}
