src/test/resources/reject/compoundTypeWithNoConstant.ul
boolean bar ()
{
    int[] id1;
}
